[gd_scene load_steps=9 format=2]

[ext_resource path="res://Styles/ButtonHover.tres" type="StyleBox" id=1]
[ext_resource path="res://Fonts/TheGreatestFont-Z7dl.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Styles/ButtonNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/ButtonPressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/Main Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/Menus/MainMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Temporary Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.407843, 0.666667, 1, 1 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 232.0
margin_right = 704.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "PLAY"

[node name="SettingsButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 344.0
margin_right = 704.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 456.0
margin_right = 704.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "EXIT"

[node name="GameTitle" type="Label" parent="."]
margin_left = 152.0
margin_top = 64.0
margin_right = 871.0
margin_bottom = 199.0
custom_fonts/font = ExtResource( 5 )
text = "BEATQUEST"

[node name="GameFooter" type="Label" parent="."]
margin_left = 16.0
margin_top = 528.0
margin_right = 288.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 2 )
text = "This game was made by Jayden Falcone & Tristan Le for 12.1 Computer Science"
autowrap = true

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
